- Allow selection in editor
- Fix incomplete hotkey tag vanilla crash