@@ -7,7 +7,7 @@
     ],
     "description": "Edit VTML in-game",
     "side": "client",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "dependencies": {
         "game": ""
     }
